KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Book_Penalty__c/Book_Penalty__c.object-meta.xml
<CustomObject>
    <label>Book Penalty</label>
    <nameField>
        <displayFormat>BPid-{000}</displayFormat>
        <label>BPid</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Penalties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>