KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Book_Penalty__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer ID</label>
    <referenceTo>Smart_Library_Customer__c</referenceTo>
    <relationshipLabel>Book Penalties</relationshipLabel>
    <relationshipName>Book_Penalties</relationshipName>
    <type>Lookup</type>
</CustomField>