KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Book_Penalty__c/fields/Customer_Media__c.field-meta.xml
<CustomField>
    <fullName>Customer_Media__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Media</label>
    <referenceTo>Customer_Media__c</referenceTo>
    <relationshipLabel>Book Penalties</relationshipLabel>
    <relationshipName>Book_Penalties</relationshipName>
    <type>Lookup</type>
</CustomField>