KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Book_Penalty__c/fields/Days_left_to_return__c.field-meta.xml
<CustomField>
    <fullName>Days_left_to_return__c</fullName>
    <formula>(Customer_Media__r.Date_of_return__c-TODAY())+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days left to return</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>