KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Book_Penalty__c/fields/Fine_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fine_Amount__c</fullName>
    <formula>IF( Days_left_to_return__c &lt;0,(0- Days_left_to_return__c )*3, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fine Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>